--- a/app/views/bookings/confirm.html.haml
+++ b/app/views/bookings/confirm.html.haml
@@ -1,21 +1,20 @@
 - if flash.notice
-  .flash.notice
-    = flash.notice
-== t('booking.received')
-%br
-%br
-== t('booking.confirmation')
-%br
-%br
-== t('booking.pay')
-%br
-%br
-%br
-== t('booking.payson')
-%br
-%a{href: "https://www.payson.fi/SendMoney/?De=Standard+%2f+Delux=info%40villataika.fi=75%2c00=EUR=1", style: "width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;", title: "Payson internetbetalningar"}
-  = t(booking.pay_button)
-  75
-%a{href: "https://www.payson.fi/SendMoney/?De=Suite=info%40villataika.fi=90%2c00=EUR=1", style: "width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;", title: "Payson internetbetalningar"}
-  = t(booking.pay_button)
-  90
+  .flash.notice= flash.notice
+= raw t('booking.received')
+%br/
+%br/
+= raw t('booking.confirmation')
+%br/
+%br/
+= raw t('booking.pay')
+%br/
+%br/
+%br/
+= raw t('booking.payson')
+%br/
+%a{:href => "https://www.payson.fi/SendMoney/?De=Standard+%2f+Delux&Se=info%40villataika.fi&Cost=80%2c00&Currency=EUR&&Sp=1", :style => "width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;", :title => "Payson internetbetalningar"}
+  = t("booking.pay_button")
+  75 &euro;
+%a{:href => "https://www.payson.fi/SendMoney/?De=Suite&Se=info%40villataika.fi&Cost=95%2c00&Currency=EUR&&Sp=1", :style => "width: 170px; height: 55px; background: url('https://www.payson.se/sites/all/files/images/external/PayBtn_BgImg_Clean.png') no-repeat scroll 0% 0% transparent; display: block; text-indent: 45px; padding-top: 15px; text-decoration: none; font-size: 13px; font-family: Arial; font-weight: bold; color: #00245D;", :title => "Payson internetbetalningar"}
+  = t("booking.pay_button")
+  90 &euro;
