removed last erbs

--- a/app/views/bookings/_matrix.html.haml
+++ b/app/views/bookings/_matrix.html.haml
@@ -1,22 +1,22 @@
 %table.book-month
   %tr
-    %td{width: "58px"}
+    %td{:width => "58px"}
     %td
-      %a{href: "new?start=#{start - 30.day}"} month
+      %a{:href => "new?start=#{start - 30.day}"} month
       = image_tag "arrow-2.gif"
     %td
-      %a{href: "new?start=#{start - 7.day}"} week
+      %a{:href => "new?start=#{start - 7.day}"} week
       = image_tag "arrow-2.gif"
     %td
       = start
       = image_tag "line.gif"
       = start + 10.day
-      \   
+      \&nbsp;&nbsp;&nbsp;
     %td
-      %a{href: "new?start=#{start + 7.day}"} week
+      %a{:href => "new?start=#{start + 7.day}"} week
       = image_tag "arrow.gif"
     %td
-      %a{href: "new?start=#{start + 30.day}"} month
+      %a{:href => "new?start=#{start + 30.day}"} month
       = image_tag "arrow.gif"
   %table.book
     %thead
@@ -25,7 +25,7 @@
         %th
           ma 23.7
           /
-            <haml_loud> day </haml_loud>
+            <haml:loud> day </haml:loud>
     %tbody
       - rooms.each do |room|
         %tr
@@ -33,11 +33,11 @@
             = room
           - days.each do |day|
             %th.book-cell
-              = div(room,day)
+              = rawdiv(room,day)
               - if room_free(room,day)
-                %a{href: "#"}
-                  .ok
-                    = image_tag "ok.png"  , :height => "18px" , :width => "18px"
+                %a{:href => "#"}
+                .ok
+                  = image_tag "ok.png"  , :height => "18px" , :width => "18px"
               - else
                 .not
                   = image_tag "not.png"  , :height => "18px" , :width => "18px"
