--- a/app/views/bookings/rooms_day.html.haml
+++ b/app/views/bookings/rooms_day.html.haml
@@ -1,9 +1,9 @@
-- @bookings.each do |room , free|
+- @rooms.each do |room|
 - free = true
   %td
-    %div{:class => free ? 'free' : 'taken', :id => room}
+    %div{:class => free ? 'free' : 'taken', :id => room.name}
       - if free
         %a{:href => "#"}
-          = room.capitalize
+          = room.name.capitalize
       - else
-        = room
+        = room.name
