--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,7 +56,7 @@
     #footer
       .kolmas
         %b> Villa Taika
-        , Fiskarsintie 513, Antskog
+        , Fiskarsintie 513, 10480 Antskog
         %br/
         www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
       .kolmas
