--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,6 @@
  * file per style scope.
  *
  *= require_self
- *= require jquery-ui.core
- *= require jquery-ui.datepicker
+ *= require jquery-ui/datepicker
  *= require_tree .
  */
