--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     %meta{:content => "Bed and Breakfast Villa Taika : #{t('slogan') + ' ' + t(@page + ".short")}", :name => "description"}/
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "content-type"}/
     %meta{:content => @locale, "http-equiv" => "Content-Language"}/
+    = csrf_meta_tags
     %title
       Bed &amp; Breakfast Villa Taika : #{t(@page + ".short")}
   %body
