fix booking model
and minors

--- a/app/views/bookings/booking.html.haml
+++ b/app/views/bookings/booking.html.haml
@@ -8,7 +8,7 @@
 %br/
 %br/
 .bookform
-  = form_tag(:action => "booking", :method => "post") do
+  = form_tag(:action => "booking") do
     - if flash[:errors]
       %br/
       .flash.errors
