remove payson, fix confirms

--- a/app/views/booking_mailer/confirm.text.haml
+++ b/app/views/booking_mailer/confirm.text.haml
@@ -1,8 +1,7 @@
-= t("booking.name")
-\: #{@booking.name}
-\#{t("booking.email")} : #{@booking.email}
-\#{t("booking.phone")} : #{@booking.phone}
-\#{t("booking.room")} : #{@booking.room}
-\#{t("booking.arriving")} : #{@booking.arriving}
-\#{t("booking.nights")} : #{(Date.parse(@booking.leaving.to_s) - Date.parse(@booking.arriving.to_s)).to_i}
-\#{t("booking.comment")} : #{@booking.comment}
+= t("booking.name") + " : " + @booking.name
+= t("booking.email") + " : " + @booking.email
+= t("booking.phone") + " : " + @booking.phone
+= t("booking.room")+ " : " + @booking.room.name.capitalize
+= t("booking.arriving") + " : " + @booking.arriving.to_s
+= t("booking.nights") + " : " + @booking.nights.to_s
+= t("booking.comment") + " : " + @booking.comment
