--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -3,6 +3,7 @@
 @import "breakpoint" ;
 
 $susy: layout(12 1/2 fluid float center);
+$large: 700px;
 
 body
 {
@@ -163,20 +164,31 @@ h4 {
 }
 
 
-.lcol
-{
+.lcol {
   @include span(first 2 of 12);
 }
 
 .lcontent {
-  position: relative;
-  padding: 0px 15px 0px 15px;
+  ul.divided li {
+    border-top: solid 1px #F5F5F5;
+    margin-top: 4px;
+    padding-top: 4px;
+    margin-left: -30px;
+    background-position: 0px 1px;
+    font-size: 12px;
+  }
+
+  ul.divided li.first
+  {
+    border-top: 0px;
+    margin-top: 0px;
+    padding-top: 0px;
+    background-position: 0px 5px;
+  }
 }
 
 .rcontent {
-  position: relative;
   padding-top: 25px;
-
   div.right ul {
     font-size: 1.1em;
     word-spacing: 3px;
@@ -220,23 +232,6 @@ p {
 .summary {
   text-align: right;
   font-style: italic;
-}
-
-ul.divided li {
-  border-top: solid 1px #F5F5F5;
-  margin-top: 4px;
-  padding-top: 4px;
-  margin-left: -30px;
-  background-position: 0px 1px;
-  font-size: 12px;
-}
-
-ul.divided li.first
-{
-  border-top: 0px;
-  margin-top: 0px;
-  padding-top: 0px;
-  background-position: 0px 5px;
 }
 
 .rcol
@@ -312,25 +307,23 @@ line-height: 1.4em;
 }
 
 .photobox_w{
-  border: solid 1px #fff;
-  padding: 5px;
-  color: inherit;
-  font-size: 13px;
   line-height: 1.4em;
   height: 170px;
   text-align: center;
-  @include gallery( 4 of 12);
+  @include gallery( 6 of 12);
+  @include breakpoint($large) {
+    @include gallery( 4 of 12);
+  }
 }
 
 .photobox_h{
-  border: solid 1px #fff;
-  padding: 5px;
-  color: inherit;
-  font-size: 13px;
   line-height: 1.4em;
   height: 230px;
   text-align: center;
-  @include gallery( 3 of 12);
+  @include gallery( 6 of 12);
+  @include breakpoint($large) {
+    @include gallery( 4 of 12);
+  }
 }
 
 .centre {
@@ -340,7 +333,7 @@ line-height: 1.4em;
 .lotus {
   @include span(first 1 of 24 );
   visibility: hidden;
-  @include breakpoint(700px) {
+  @include breakpoint($large) {
     visibility:visible;
     @include span( first 9 of 24);
   }
@@ -348,7 +341,7 @@ line-height: 1.4em;
 
 .aurinko_box {
   @include span( last 23 of 24 );
-  @include breakpoint(700px) {
+  @include breakpoint($large) {
     @include span(last 14 of 24);
   }
 }
@@ -392,28 +385,27 @@ div.kolmas {
   float: left;
 }
 
+.wide_bedbox {
+  @include span(100%);
+  @include break;
+}
+
 .widebox {
-  width: 100%;
-  height: 250px;
+  @include span(100%);
 }
 
-.smallbox {
-  width: 285px;
-  float: left;
+.bedbox {
+  img {
+    border: 2px solid #c1cabb;
+    text-align: center;
+  }
+  @include span(100%);
+  @include breakpoint($large) {
+    margin: 10px;
+    @include gallery(4);
+  }
 }
 
-.smallbox2 {
-  width: 210px;
-  float: left;
-}
-
-.smallbox img {
-  border: 2px solid #c1cabb;
-}
-
-.smallbox2 img {
-  border: 2px solid #c1cabb;
-}
 
 div.roomheader {
   font-size: 120%;
@@ -450,7 +442,9 @@ img {
   width : 100%;
   margin-bottom: 10px;
 }
-
+.break{
+  @include break;
+}
 .header {
 	color: #50514D;
 	font-weight: bold;
