--- a/app/views/photos.html.haml
+++ b/app/views/photos.html.haml
@@ -1,6 +1,6 @@
 - photos.each do |photo|
   %div{:class => "photobox_#{photo.split('_').first}"}
-    %a.lightbox{:href => "/photos/large/#{photo}.jpg", :title => t("."+photo)}
-      %img{:alt => t("."+photo), :src => "/photos/#{photo}.jpg"}
+    %a.lightbox{:href => "/photos/large/#{photo}.jpg", :title => "#{t('.'+photo)}"}
+      %img{:alt => "#{t('.'+photo)}", :src => "/photos/#{photo}.jpg"}
     %br
     = t "."+photo
