--- a/app/views/groups.html.haml
+++ b/app/views/groups.html.haml
@@ -1,12 +1,13 @@
 .left
-  %img{:height => "336px/", :src => "/images/sali.gif", :width => "450px"}/
+  = image_tag "/images/sali.gif"  , :width => "100%"
 .left2
-  %img{:alt => "allas", :src => "/images/allas.jpg"}/
-  %img{:alt => "blank", :height => "1px", :src => "/images/blank.gif", :width => "140px"}/
-  %img{:alt => "garden", :height => "196", :src => "/images/garden_group.jpg", :width => "140px"}/
-.right
-  = raw t "groups.right"
+  .left_img
+    = image_tag "/images/allas.jpg"  , :width => "100%" , :alt => "allas"
+    = image_tag "/images/blank.gif"  ,:height => "4px", :alt => "blank"
+    = image_tag "/images/garden_group.jpg"  , :width => "100%" , :alt => "garden"
+  .left_list
+    = raw t "groups.right"
 .divider
-.left
+.widebox
   %br/
   = raw t "groups.bottom"
