--- a/app/views/map.html.haml
+++ b/app/views/map.html.haml
@@ -1,9 +1,9 @@
-.left
+.left_map
   %iframe{:frameborder => "0", :height => "500", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :width => "600" , :src => "http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=villa+taika&aq=&sll=60.166365,23.585501&sspn=0.021649,0.077162&ie=UTF8&hq=villa+taika&hnear=&cid=11230810214822612726&ll=60.149366,23.563614&spn=0.170886,0.411301&z=11&iwloc=A&output=embed"}
   %br/
   %small
     %a{:href => "http://maps.google.com/maps?f=q&source=embed&hl=en&geocode=&q=villa+taika&aq=&sll=60.166365,23.585501&sspn=0.021649,0.077162&ie=UTF8&hq=villa+taika&hnear=&cid=11230810214822612726&ll=60.149366,23.563614&spn=0.170886,0.411301&z=11&iwloc=A", :style => "color:#0000FF;text-align:left"} View Larger Map
-.right
+.right_map
   = raw t "map.one"
   %br/
   %br/
