--- a/app/views/bookings/confirm.html.haml
+++ b/app/views/bookings/confirm.html.haml
@@ -6,7 +6,7 @@
 %br= t("booking.name") + " : " + @booking.name
 %br= t("booking.email") + " : " + @booking.email
 %br= t("booking.phone") + " : " + @booking.phone
-%br= t("booking.room")+ " : " + @booking.room.name.capitalize
+%br= t("booking.room")+ " : " + @booking.room.capitalize
 %br= t("booking.arriving") + " : " + @booking.arriving.to_s
 %br= t("booking.nights") + " : " + @booking.nights.to_s
 %br= t("booking.comment") + " : " + @booking.comment
