--- a/app/views/booking_mailer/confirm.text.haml
+++ b/app/views/booking_mailer/confirm.text.haml
@@ -1,7 +1,7 @@
 = t("booking.name") + " : " + @booking.name
 = t("booking.email") + " : " + @booking.email
 = t("booking.phone") + " : " + @booking.phone
-= t("booking.room")+ " : " + @booking.room.name.capitalize
+= t("booking.room")+ " : " + @booking.room.capitalize
 = t("booking.arriving") + " : " + @booking.arriving.to_s
 = t("booking.nights") + " : " + @booking.nights.to_s
 = t("booking.comment") + " : " + @booking.comment
